# ot-harjoitustyo

./: .coveragerc  .gitignore  README.md  pyproject.toml  tasks.py
dokumentaatio/: Changelog.md  Käyttöohje.md  Testaus.md  arkkitehtuuri.md  changelog.md  käyttöohje.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: pyproject.toml
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: Sekvenssi.md  SekvenssiExtended.md  monopoli.md
src/: config.py  constants.py  game.py  game_logic.py  main.py
src/UI/: ui.py
src/services/: grid.py  piece.py  scores.py  text.py
src/tests/: test_grid.py  test_moving.py  test_pieces.py
src/text/: text.py
src/ui/: add_score.py  game.py  highscore.py  main_menu.py  ui.py
src/variables/: config.py  constants.py  highscore.txt  text.py
