[tool.poetry]
name = "\"ohte project\""
version = "0.1.0"
description = ""
authors = ["Miikka Seppi <miikka.seppi123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.3.0"
coverage = "^7.2.3"
invoke = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
